force-app/main/default/objects/CCXR_User__c/CCXR_User__c.object-meta.xml
<CustomObject>
    <label>CCXR User</label>
    <nameField>
        <displayFormat>USR-{0000}</displayFormat>
        <label>CCXR User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCXR User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>