force-app/main/default/objects/CCXR_User__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Waiter</fullName>
            </value>
            <value>
                <fullName>Front Desk Manager</fullName>
            </value>
            <value>
                <fullName>Restaurant Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>