force-app/main/default/objects/CCXR_User__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>