force-app/main/default/objects/CCXR_User__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>UserName</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>