force-app/main/default/objects/CCXR_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UserName__c</columns>
    <columns>Employee_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>